--- a/client/src/components/File/File.css
+++ b/client/src/components/File/File.css
@@ -1,11 +1,11 @@
 .File{
-    min-height: 3rem;
     display: flex;
     flex-direction: row;
     width: 100%;
     justify-content: center;
     align-items: center;
     border-radius: 0.5rem;
+    padding: 2rem 0;
 }
 
 .File:hover{
@@ -16,6 +16,7 @@
     width: 40%;
     font-size: 1.2rem;
     font-weight: bold;
+    margin-left: 1rem;
 }
 
 .file-size{
@@ -32,6 +33,11 @@
     justify-content: flex-end;
     align-items: center;
 }
+
+.file-option:last-child{
+    margin-right: 1rem;
+}
+
 .file-download:hover{
     font-size: 1.5rem;
     transition: all 0.2s;
