--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,11 +4,14 @@
   background-color: var(--primary-color);
   color: var(--secondary-color);
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.file-list{
+.app-component{
   width: 75%;
+}
+.file-list{
   height: 50%;
   overflow-y: scroll;
 }
